Update README and extension page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Bulk delete your Facebook posts, comments, and activity history to protect your privacy and reduce your digital footprint."
     />
+    <link rel="icon" type="image/png" href="icons/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="icons/icon.png" />
     <style>
       * {
         margin: 0;
@@ -237,7 +239,12 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <h1>🔒 Facebook Activity Scrubber</h1>
+            <img
+              src="icons/icon.png"
+              alt="Facebook Activity Scrubber"
+              style="width: 32px; height: 32px"
+            />
+            <h1>Facebook Activity Scrubber</h1>
           </div>
           <a href="#download" class="cta-button">Get Extension</a>
         </div>
