Add privacy policy

--- a/index.html
+++ b/index.html
@@ -384,6 +384,15 @@
             consider backing up important posts before using this tool. We
             recommend testing with a small batch first.
           </div>
+
+          <div style="text-align: center; margin-top: 20px">
+            <a
+              href="privacy-policy.html"
+              style="color: #1976d2; text-decoration: none; font-weight: 600"
+            >
+              📋 Read Our Complete Privacy Policy
+            </a>
+          </div>
         </section>
       </div>
 
@@ -451,6 +460,14 @@
         </p>
         <p style="margin-top: 10px; font-size: 14px; opacity: 0.8">
           Your data, your choice, your privacy.
+        </p>
+        <p style="margin-top: 15px">
+          <a
+            href="privacy-policy.html"
+            style="color: #ccc; text-decoration: none"
+          >
+            Privacy Policy
+          </a>
         </p>
       </div>
     </footer>
