--- a/popup.html
+++ b/popup.html
@@ -340,7 +340,7 @@
         </div>
         <div class="stat-card stat-failed">
           <div class="stat-number" id="failedCount">0</div>
-          <div class="stat-label">Failed</div>
+          <div class="stat-label">Skipped</div>
         </div>
       </div>
 
