--- a/popup.html
+++ b/popup.html
@@ -277,8 +277,124 @@
         }
       }
 
+      @keyframes bounce {
+        0%,
+        20%,
+        53%,
+        80%,
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
+        40%,
+        43% {
+          transform: translate3d(0, -8px, 0);
+        }
+        70% {
+          transform: translate3d(0, -4px, 0);
+        }
+        90% {
+          transform: translate3d(0, -2px, 0);
+        }
+      }
+
+      @keyframes shake {
+        0%,
+        100% {
+          transform: translateX(0);
+        }
+        10%,
+        30%,
+        50%,
+        70%,
+        90% {
+          transform: translateX(-2px);
+        }
+        20%,
+        40%,
+        60%,
+        80% {
+          transform: translateX(2px);
+        }
+      }
+
       .loading {
         animation: pulse 2s infinite;
+      }
+
+      .bounce {
+        animation: bounce 1.5s infinite;
+      }
+
+      .shake {
+        animation: shake 0.5s ease-in-out;
+      }
+
+      .step.highlight .step-number {
+        /* background: #f59e0b; */
+        animation: pulse 1.5s infinite;
+      }
+
+      /* .btn-warning {
+        background: linear-gradient(135deg, #f59e0b, #fbbf24);
+        color: white;
+        border: none;
+        font-weight: 600;
+        position: relative;
+        overflow: hidden;
+      } */
+
+      .btn-warning::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          90deg,
+          transparent,
+          rgba(255, 255, 255, 0.3),
+          transparent
+        );
+        animation: shimmer 2s infinite;
+      }
+
+      @keyframes shimmer {
+        0% {
+          left: -100%;
+        }
+        100% {
+          left: 100%;
+        }
+      }
+
+      .btn:disabled {
+        background: #9ca3af;
+        cursor: not-allowed;
+        transform: none;
+        box-shadow: none;
+        opacity: 0.6;
+      }
+
+      .page-status {
+        padding: 8px 12px;
+        border-radius: 4px;
+        font-size: 10px;
+        font-weight: 500;
+        margin-top: 6px;
+        text-align: center;
+      }
+
+      .page-status.correct {
+        background: #d1fae5;
+        color: #065f46;
+        border: 1px solid #10b981;
+      }
+
+      .page-status.incorrect {
+        background: #fee2e2;
+        color: #991b1b;
+        border: 1px solid #ef4444;
       }
     </style>
   </head>
@@ -307,14 +423,12 @@
         <div class="step-number">2</div>
         <div class="step-title">Navigate to Activity Page</div>
         <div class="step-content">
-          <div class="form-group">
-            <div class="field-info">
-              Go to your Facebook activity log to begin cleaning
-            </div>
-            <button id="viewActivityLog" class="btn btn-secondary">
-              Go to Activity Page
-            </button>
+          <div class="field-info">
+            Go to your Facebook activity log to begin cleaning
           </div>
+          <button id="viewActivityLog" class="btn btn-secondary">
+            Go to Activity Page
+          </button>
         </div>
       </div>
 
@@ -330,7 +444,7 @@
       </div>
 
       <div id="status" class="status">
-        Ready to clean your Facebook activity
+        Please navigate to your Facebook Activity Log to begin
       </div>
 
       <div class="stats">
