disable debugger and clean up ui

--- a/popup.html
+++ b/popup.html
@@ -173,6 +173,7 @@
         cursor: not-allowed;
         transform: none;
         box-shadow: none;
+        opacity: 0.6;
       }
 
       .btn-secondary {
@@ -329,20 +330,6 @@
         animation: shake 0.5s ease-in-out;
       }
 
-      .step.highlight .step-number {
-        /* background: #f59e0b; */
-        animation: pulse 1.5s infinite;
-      }
-
-      /* .btn-warning {
-        background: linear-gradient(135deg, #f59e0b, #fbbf24);
-        color: white;
-        border: none;
-        font-weight: 600;
-        position: relative;
-        overflow: hidden;
-      } */
-
       .btn-warning::before {
         content: '';
         position: absolute;
@@ -374,27 +361,6 @@
         transform: none;
         box-shadow: none;
         opacity: 0.6;
-      }
-
-      .page-status {
-        padding: 8px 12px;
-        border-radius: 4px;
-        font-size: 10px;
-        font-weight: 500;
-        margin-top: 6px;
-        text-align: center;
-      }
-
-      .page-status.correct {
-        background: #d1fae5;
-        color: #065f46;
-        border: 1px solid #10b981;
-      }
-
-      .page-status.incorrect {
-        background: #fee2e2;
-        color: #991b1b;
-        border: 1px solid #ef4444;
       }
     </style>
   </head>
