Clarify uses for the extension.

--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
                 actions taken.
               </p>
             </div>
+            <div class="feature-card">
+              <h4>⚠️ Activity Log Only</h4>
+              <p>
+                <strong>ONLY deletes activity history content.</strong> Will NOT
+                unfollow pages, unfriend friends, or modify your profile,
+                connections, or account settings.
+              </p>
+            </div>
           </div>
         </section>
 
@@ -382,7 +390,11 @@
             <strong>⚠️ Important:</strong> This extension permanently deletes
             your Facebook content. Always review what will be deleted and
             consider backing up important posts before using this tool. We
-            recommend testing with a small batch first.
+            recommend testing with a small batch first. <br /><br />
+            <strong>📋 What this extension does NOT do:</strong> This tool ONLY
+            removes activity log content (posts, comments, likes, etc.). It will
+            NOT unfollow pages, unfriend your friends, remove connections, or
+            modify your profile or account settings.
           </div>
 
           <div style="text-align: center; margin-top: 20px">
