Update with link to extension

--- a/index.html
+++ b/index.html
@@ -246,7 +246,11 @@
             />
             <h1>Facebook Activity Scrubber</h1>
           </div>
-          <a href="#download" class="cta-button">Get Extension</a>
+          <a
+            href="https://chromewebstore.google.com/detail/facebook-activity-scrubbe/dkbcfnpgaiodmfahkfglnpeldacahgbc?authuser=0&hl=en"
+            class="cta-button"
+            >Get Extension</a
+          >
         </div>
       </div>
     </header>
@@ -450,7 +454,7 @@
               digital privacy today.
             </p>
             <a
-              href="#"
+              href="https://chromewebstore.google.com/detail/facebook-activity-scrubbe/dkbcfnpgaiodmfahkfglnpeldacahgbc?authuser=0&hl=en"
               class="cta-button"
               style="font-size: 20px; padding: 20px 40px"
             >
