remove debugger button

--- a/popup.html
+++ b/popup.html
@@ -446,7 +446,12 @@
 
       <!-- Debug Panel Toggle -->
       <div class="debug-toggle" style="margin-top: 8px; text-align: center">
-        <button id="debugToggle" class="btn-debug" title="Toggle Debug Panel">
+        <button
+          id="debugToggle"
+          class="btn-debug"
+          style="display: none"
+          title="Toggle Debug Panel"
+        >
           Debug
         </button>
       </div>
