Add buy me a coffee link

--- a/index.html
+++ b/index.html
@@ -246,11 +246,35 @@
             />
             <h1>Facebook Activity Scrubber</h1>
           </div>
-          <a
-            href="https://chromewebstore.google.com/detail/facebook-activity-scrubbe/dkbcfnpgaiodmfahkfglnpeldacahgbc?authuser=0&hl=en"
-            class="cta-button"
-            >Get Extension</a
-          >
+          <div style="display: flex; gap: 15px; align-items: center">
+            <a
+              href="https://coff.ee/cxsdeveloper"
+              class="support-button"
+              style="
+                display: inline-block;
+                background: #ffdd00;
+                color: #000;
+                padding: 10px 15px;
+                text-decoration: none;
+                border-radius: 25px;
+                font-size: 14px;
+                font-weight: 600;
+                transition: all 0.3s ease;
+                box-shadow: 0 4px 15px rgba(255, 221, 0, 0.3);
+              "
+              target="_blank"
+              rel="noopener noreferrer"
+              onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 6px 20px rgba(255, 221, 0, 0.5)';this.style.background='#FFE44D';"
+              onmouseout="this.style.transform='';this.style.boxShadow='0 4px 15px rgba(255, 221, 0, 0.3)';this.style.background='#FFDD00';"
+            >
+              ☕ Buy Me a Coffee
+            </a>
+            <a
+              href="https://chromewebstore.google.com/detail/facebook-activity-scrubbe/dkbcfnpgaiodmfahkfglnpeldacahgbc?authuser=0&hl=en"
+              class="cta-button"
+              >Get Extension</a
+            >
+          </div>
         </div>
       </div>
     </header>
@@ -483,6 +507,15 @@
             style="color: #ccc; text-decoration: none"
           >
             Privacy Policy
+          </a>
+          <span style="color: #ccc; margin: 0 10px">|</span>
+          <a
+            href="https://coff.ee/cxsdeveloper"
+            style="color: #ccc; text-decoration: none"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Buy Me a Coffee
           </a>
         </p>
       </div>
