--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
 
       .logo h1 {
         color: #4267b2;
-        font-size: 28px;
+        font-size: 24px;
         font-weight: 700;
+        margin-bottom: 0;
+      }
+
+      .logo a {
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        gap: 15px;
       }
 
       .hero {
@@ -84,7 +92,7 @@
         color: white;
         padding: 15px 30px;
         text-decoration: none;
-        border-radius: 25px;
+        border-radius: 8px;
         font-size: 18px;
         font-weight: 600;
         transition: all 0.3s ease;
@@ -240,39 +248,93 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <img
-              src="icons/icon.png"
-              alt="Facebook Activity Scrubber"
-              style="width: 32px; height: 32px"
-            />
-            <h1>Facebook Activity Scrubber</h1>
+            <a href="index.html">
+              <img
+                src="icons/icon.png"
+                alt="Facebook Activity Scrubber"
+                style="width: 32px; height: 32px"
+              />
+              <h1>Facebook Activity Scrubber</h1>
+            </a>
           </div>
-          <div style="display: flex; gap: 15px; align-items: center">
+          <div
+            style="
+              display: flex;
+              gap: 15px;
+              align-items: center;
+              margin-left: auto;
+            "
+          >
+            <a
+              href="support.html"
+              style="
+                display: inline-flex;
+                color: #4267b2;
+                padding: 10px 5px;
+                text-decoration: none;
+                font-size: 14px;
+                font-weight: 600;
+                height: 39px;
+                align-items: center;
+                justify-content: center;
+                transition: all 0.3s ease;
+                border-radius: 8px;
+                text-align: center;
+              "
+              onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 2px 10px rgba(66, 103, 178, 0.2)';this.style.background='rgba(66, 103, 178, 0.1)';"
+              onmouseout="this.style.transform='';this.style.boxShadow='none';this.style.background='transparent';"
+            >
+              Need Help?
+            </a>
             <a
               href="https://coff.ee/cxsdeveloper"
               class="support-button"
               style="
-                display: inline-block;
-                background: #ffdd00;
-                color: #000;
-                padding: 10px 15px;
+                display: inline-flex;
+                background: transparent;
+                color: #4267b2;
+                padding: 10px 5px;
                 text-decoration: none;
-                border-radius: 25px;
+                border-radius: 8px;
                 font-size: 14px;
                 font-weight: 600;
                 transition: all 0.3s ease;
-                box-shadow: 0 4px 15px rgba(255, 221, 0, 0.3);
+                text-wrap: nowrap;
+                height: 39px;
+                align-items: center;
+                justify-content: center;
+                border: none;
+                text-align: center;
               "
               target="_blank"
               rel="noopener noreferrer"
-              onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 6px 20px rgba(255, 221, 0, 0.5)';this.style.background='#FFE44D';"
-              onmouseout="this.style.transform='';this.style.boxShadow='0 4px 15px rgba(255, 221, 0, 0.3)';this.style.background='#FFDD00';"
+              onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 2px 10px rgba(66, 103, 178, 0.2)';this.style.background='rgba(66, 103, 178, 0.1)';"
+              onmouseout="this.style.transform='';this.style.boxShadow='none';this.style.background='transparent';"
             >
               ☕ Buy Me a Coffee
             </a>
             <a
               href="https://chromewebstore.google.com/detail/facebook-activity-scrubbe/dkbcfnpgaiodmfahkfglnpeldacahgbc?authuser=0&hl=en"
               class="cta-button"
+              style="
+                display: inline-flex;
+                background: #4267b2;
+                color: white;
+                padding: 10px 15px;
+                text-decoration: none;
+                border-radius: 8px;
+                font-size: 14px;
+                font-weight: 600;
+                transition: all 0.3s ease;
+                box-shadow: 0 4px 15px rgba(66, 103, 178, 0.3);
+                height: 39px;
+                min-width: 128px;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+              "
+              onmouseover="this.style.background='#365899';this.style.transform='translateY(-2px)';this.style.boxShadow='0 6px 20px rgba(66, 103, 178, 0.6)';"
+              onmouseout="this.style.background='#4267b2';this.style.transform='';this.style.boxShadow='0 4px 15px rgba(66, 103, 178, 0.3)';"
               >Get Extension</a
             >
           </div>
@@ -301,27 +363,6 @@
               <p>
                 Remove old posts, status updates, comments, likes, and reactions
                 from your Facebook profile automatically.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h4>🎯 Smart Controls</h4>
-              <p>
-                Choose specific time periods, content types, and keywords to
-                target exactly what you want to delete.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h4>👀 Preview Mode</h4>
-              <p>
-                See what will be deleted before taking action with built-in
-                safeguards to prevent accidental deletions.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h4>⚡ Time Saving</h4>
-              <p>
-                Complete in minutes what would take weeks of manual deletion.
-                Clean up years of content effortlessly.
               </p>
             </div>
             <div class="feature-card">
@@ -503,6 +544,10 @@
           Your data, your choice, your privacy.
         </p>
         <p style="margin-top: 15px">
+          <a href="support.html" style="color: #ccc; text-decoration: none">
+            Get Support
+          </a>
+          <span style="color: #ccc; margin: 0 10px">|</span>
           <a
             href="privacy-policy.html"
             style="color: #ccc; text-decoration: none"
