Edit styles for mobile

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -206,14 +206,16 @@
               style="
                 display: inline-flex;
                 color: #4267b2;
-                padding: 10px 15px;
+                padding: 10px 5px;
                 text-decoration: none;
                 font-size: 14px;
                 font-weight: 600;
                 height: 39px;
                 align-items: center;
+                justify-content: center;
                 transition: all 0.3s ease;
                 border-radius: 8px;
+                text-align: center;
               "
               onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 2px 10px rgba(66, 103, 178, 0.2)';this.style.background='rgba(66, 103, 178, 0.1)';"
               onmouseout="this.style.transform='';this.style.boxShadow='none';this.style.background='transparent';"
@@ -227,7 +229,7 @@
                 display: inline-flex;
                 background: transparent;
                 color: #4267b2;
-                padding: 10px 15px;
+                padding: 10px 5px;
                 text-decoration: none;
                 border-radius: 8px;
                 font-size: 14px;
@@ -236,7 +238,9 @@
                 text-wrap: nowrap;
                 height: 39px;
                 align-items: center;
+                justify-content: center;
                 border: none;
+                text-align: center;
               "
               target="_blank"
               rel="noopener noreferrer"
@@ -260,7 +264,10 @@
                 transition: all 0.3s ease;
                 box-shadow: 0 4px 15px rgba(66, 103, 178, 0.3);
                 height: 39px;
+                min-width: 128px;
                 align-items: center;
+                justify-content: center;
+                text-align: center;
               "
               onmouseover="this.style.background='#365899';this.style.transform='translateY(-2px)';this.style.boxShadow='0 6px 20px rgba(66, 103, 178, 0.6)';"
               onmouseout="this.style.background='#4267b2';this.style.transform='';this.style.boxShadow='0 4px 15px rgba(66, 103, 178, 0.3)';"
