fix navbar and footer

--- a/support.html
+++ b/support.html
@@ -204,7 +204,8 @@
               margin-left: auto;
             "
           >
-            <span
+            <a
+              href="support.html"
               style="
                 display: inline-flex;
                 color: #4267b2;
@@ -217,13 +218,13 @@
                 justify-content: center;
                 transition: all 0.3s ease;
                 border-radius: 8px;
-                background: rgba(66, 103, 178, 0.1);
-                cursor: default;
                 text-align: center;
               "
+              onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 2px 10px rgba(66, 103, 178, 0.2)';this.style.background='rgba(66, 103, 178, 0.1)';"
+              onmouseout="this.style.transform='';this.style.boxShadow='none';this.style.background='transparent';"
             >
               Need Help?
-            </span>
+            </a>
             <a
               href="https://coff.ee/cxsdeveloper"
               class="support-button"
@@ -380,6 +381,13 @@
         <p style="margin-top: 15px">
           <a href="support.html" style="color: #ccc; text-decoration: none">
             Get Support
+          </a>
+          <span style="color: #ccc; margin: 0 10px">|</span>
+          <a
+            href="privacy-policy.html"
+            style="color: #ccc; text-decoration: none"
+          >
+            Privacy Policy
           </a>
           <span style="color: #ccc; margin: 0 10px">|</span>
           <a
