--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,7 +26,7 @@
       }
 
       .container {
-        max-width: 900px;
+        max-width: 1200px;
         margin: 0 auto;
         padding: 0 20px;
       }
@@ -512,6 +512,13 @@
         <p style="margin-top: 15px">
           <a href="support.html" style="color: #ccc; text-decoration: none">
             Get Support
+          </a>
+          <span style="color: #ccc; margin: 0 10px">|</span>
+          <a
+            href="privacy-policy.html"
+            style="color: #ccc; text-decoration: none"
+          >
+            Privacy Policy
           </a>
           <span style="color: #ccc; margin: 0 10px">|</span>
           <a
