Add Hide from Profile edge case

--- a/popup.html
+++ b/popup.html
@@ -386,7 +386,7 @@
         <div class="logo">
           <img src="/icons/icon.png" height="32" width="32""/>
         </div>
-        <h1>Facebook Activity Scrubber</h1>
+        <h1>Facebook Activity Scrubber - Dev Mode</h1>
         <p class="subtitle">
           Clear out your entire Facebook history with a single click
         </p>
@@ -449,7 +449,7 @@
         <button
           id="debugToggle"
           class="btn-debug"
-          style="display: none"
+          style="display: inline-block"
           title="Toggle Debug Panel"
         >
           Debug
