Add new task list.

--- a/popup.html
+++ b/popup.html
@@ -386,7 +386,7 @@
         <div class="logo">
           <img src="/icons/icon.png" height="32" width="32""/>
         </div>
-        <h1>Facebook Activity Scrubber - Dev Mode</h1>
+        <h1>Facebook Activity Scrubber</h1>
         <p class="subtitle">
           Clear out your entire Facebook history with a single click
         </p>
@@ -445,7 +445,10 @@
       </div>
 
       <!-- Debug Panel Toggle -->
-      <div class="debug-toggle" style="margin-top: 8px; text-align: center">
+      <div
+        class="debug-toggle"
+        style="margin-top: 8px; text-align: center; display: none"
+      >
         <button
           id="debugToggle"
           class="btn-debug"
