--- a/popup.html
+++ b/popup.html
@@ -188,6 +188,24 @@
         color: white;
       }
 
+      .btn.running {
+        background: linear-gradient(135deg, #f59e0b, #f97316);
+        animation: pulse 2s ease-in-out infinite;
+      }
+
+      .btn.running:hover:not(:disabled) {
+        box-shadow: 0 2px 6px rgba(245, 158, 11, 0.4);
+      }
+
+      @keyframes pulse {
+        0%, 100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.85;
+        }
+      }
+
       .status {
         background: linear-gradient(135deg, #f0f9ff, #e0f2fe);
         border: 1px solid #0ea5e9;
@@ -389,110 +407,7 @@
     </style>
   </head>
   <body>
-    <div
-      id="landingScreen"
-      class="container"
-      style="
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-      "
-    >
-      <h2 style="margin-bottom: 16px">What would you like to do?</h2>
-      <button id="btnDemonetize" class="btn" aria-label="Demonetize My Account">
-        Demonetize My Account
-      </button>
-      <button
-        id="btnScrub"
-        class="btn btn-secondary"
-        aria-label="Scrub My Facebook Activity"
-        style="margin-top: 12px"
-      >
-        Scrub My Facebook Activity
-      </button>
-    </div>
-
-    <div
-      id="demonetizeContainer"
-      class="container"
-      style="
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-      "
-    >
-      <h2 style="margin-bottom: 12px">Demonetize My Account</h2>
-      <p
-        style="
-          font-size: 13px;
-          color: #4b5563;
-          margin-bottom: 18px;
-          text-align: center;
-        "
-      >
-        This feature will automatically update your Facebook ad settings to opt
-        out of ad partner activity and offsite data sharing.
-      </p>
-      <button
-        id="startDemonetize"
-        class="btn"
-        aria-label="Start Demonetization"
-      >
-        Start Demonetization
-      </button>
-      <div id="demonetizeProgress" style="width: 100%; margin-bottom: 18px">
-        <div class="step" id="demonetizeStep1">
-          <span class="icon" id="demonetizeStep1Icon">⏳</span>
-          <span>Opt out of ad partner activity</span>
-        </div>
-        <div class="step" id="demonetizeStep2">
-          <span class="icon" id="demonetizeStep2Icon">⏳</span>
-          <span>Opt out of ads from ad partners</span>
-        </div>
-        <div class="step" id="demonetizeStep3">
-          <span class="icon" id="demonetizeStep3Icon">⏳</span>
-          <span>Disconnect future activity</span>
-        </div>
-      </div>
-      <div
-        id="demonetizeStatus"
-        class="status"
-        style="margin-top: 18px; display: none"
-      ></div>
-      <button
-        id="demonetizeRetry"
-        class="btn btn-secondary"
-        style="margin-top: 12px; display: none"
-      >
-        Retry
-      </button>
-      <canvas
-        id="confettiCanvas"
-        style="
-          position: fixed;
-          top: 0;
-          left: 0;
-          width: 100vw;
-          height: 100vh;
-          pointer-events: none;
-          z-index: 9999;
-          display: none;
-        "
-      ></canvas>
-      <button
-        id="demonetizeDone"
-        class="btn"
-        style="margin-top: 18px; display: none"
-      >
-        Done
-      </button>
-    </div>
-
-    <div id="featureContainer" style="display: none">
+    <div id="featureContainer">
       <div class="container">
         <div class="header">
           <div class="logo">
